istio/jwt-token/yaml/jwt-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-on-ingress
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-gateway
  jwtRules:
  - issuer: "your-issuer" #"testing@secure.istio.io"
    jwksUri: https://demo-api.anangsu13.cloud/auth/v1/jwks #https://raw.githubusercontent.com/istio/istio/release-1.20/security/tools/jwt/samples/jwks.json
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-gateway
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
  - to:
    - operation:
        paths: ["/auth/v1/login", "/auth/v1/jwks"]
